Bug 1655518 - Make two bool in ReverbConvolver atomic. r=karlt

The code structure is strange. This will be enough to make this safe without
fear of changing the behaviour.

Differential Revision: https://phabricator.services.mozilla.com/D85149